@@ -1,6 +1,8 @@
 Kiwix 0.9 beta5
 * New support user interface languages: cs, hsb, tt-cyrl
 * Fixed the letton language menu item (ID: 3439113)
+* Switch off automatically if loading random article
+* Avoiding duplicates in publisher & language filters in the content manager (ID: 3439108)	
 
 Kiwix 0.9 beta4
 * Fix regression, menu "last open" where not working anymore
